--- a/final_project_template.qmd
+++ b/final_project_template.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Your Title"
-subtitle: "BMIN503/EPID600 Final Project"
+subtitle: "BMIN5030 Final Project"
 author: "FirstName LastName"
 format: html
 editor: visual
@@ -10,7 +10,7 @@ embed-resources: true
 
 ------------------------------------------------------------------------
 
-Use this template to complete your project throughout the course. Your Final Project presentation will be based on the contents of this document. Replace the title/name above and text below with your own, but keep the headers. Feel free to change the theme and other display settings, although this is not required. I added a new sentence
+Use this template to complete your project throughout the course. Your Final Project presentation will be based on the contents of this document. Replace the title/name above and text below with your own, but keep the headers. Feel free to change the theme and other display settings, although this is not required.
 
 ## Overview {#sec-overview}
 
