--- a/final_project_template.qmd
+++ b/final_project_template.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Yucheng's Final Project"
 subtitle: "BMIN5030 Final Project"
-author: "FirstName LastName"
+author: "Yucheng Huang"
 format: html
 editor: visual
 number-sections: true
